--- a/src/assets/sass/lbd/plugins/_datetime-picker.scss
+++ b/src/assets/sass/lbd/plugins/_datetime-picker.scss
@@ -293,7 +293,7 @@ $bs-datetimepicker-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !default;
                 text-align: center;
                 border-bottom: 1px solid $light-gray;
                 font-size: $font-size-small;
-                text-transform: uppercase;
+                  /* text-transform: uppercase; */
                 color: $dark-gray;
                 font-weight: $font-weight-normal;
                 padding-bottom: 5px;
