--- a/archive/src/pages/assets/css/demo.css
+++ b/archive/src/pages/assets/css/demo.css
@@ -192,7 +192,7 @@
     line-height: 25px;
     font-size: 12px;
     font-weight: 600;
-    text-transform: uppercase;
+      /* text-transform: uppercase; */
 }
 
 .fixed-plugin .adjustments-line p {
@@ -761,7 +761,7 @@
 
 .brand .h1-seo {
     font-size: 2.8em;
-    text-transform: uppercase;
+      /* text-transform: uppercase; */
     font-weight: 300;
 }
 
