--- a/src/assets/sass/lbd/_cards.scss
+++ b/src/assets/sass/lbd/_cards.scss
@@ -66,7 +66,7 @@
     label{
         font-size: $font-size-small;
         margin-bottom: 5px;
-        text-transform: uppercase;
+          /* text-transform: uppercase; */
     }
 
     .card-title{
@@ -111,7 +111,7 @@
     .author{
         font-size: $font-size-small;
         font-weight: $font-weight-bold;
-        text-transform: uppercase;
+          /* text-transform: uppercase; */
     }
     .author i{
         font-size: $font-size-base;
