--- a/src/assets/sass/lbd/_tables.scss
+++ b/src/assets/sass/lbd/_tables.scss
@@ -30,7 +30,7 @@
   > thead > tr > th{
     border-bottom-width: 1px;
     font-size: $font-size-small;
-    text-transform: uppercase;
+      /* text-transform: uppercase; */
     color: $dark-gray;
     font-weight: $font-weight-normal;
     padding-bottom: 5px;
