--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -47,7 +47,7 @@ h5, .h5 {
 h6, .h6{
     font-size: $font-size-h6;
     font-weight: $font-weight-bold;
-    text-transform: uppercase;
+      /* text-transform: uppercase; */
 }
 p{
     font-size: $font-paragraph;
