--- a/src/assets/sass/lbd/mixins/_labels.scss
+++ b/src/assets/sass/lbd/mixins/_labels.scss
@@ -5,7 +5,7 @@
      color: $default-color;
      font-weight: $font-weight-semi;
      font-size: $font-size-small;
-     text-transform: uppercase;
+       /* text-transform: uppercase; */
      display: inline-block;
      vertical-align: middle;
 }
