--- a/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -125,7 +125,8 @@ body > .navbar-collapse{
                 }
 
                 i{
-                    font-size: 28px;
+                    /* @note here to control the logo size */
+                    font-size: 32px;
                     margin-right: 15px;
                     width: 30px;
                     text-align: center;
@@ -165,16 +166,16 @@ body > .navbar-collapse{
             right: 30px;
         }
 
-        .active-pro{
-            position: absolute;
-            width: 100%;
-            bottom: 10px;
+        // .active-pro{
+        //     position: absolute;
+        //     width: 100%;
+        //     bottom: 10px;
 
-            a{
-                color: $white-color !important;
+        //     a{
+        //         color: $white-color !important;
 
-            }
-        }
+        //     }
+        // }
 
         .nav-link{
             color: $white-color;
@@ -206,11 +207,16 @@ body > .navbar-collapse{
             padding: $padding-small-vertical $padding-zero;
             display: flex;
             align-items: center;
-            font-size: $font-size-large;
+            /* @note here to control the title size */
+            font-size: 24px;
             color: $white-color;
             text-align: center;
             font-weight: $font-weight-normal;
             line-height: 30px;
+            /* @note here to disable the title underline */
+            text-decoration: none; 
+            font-weight: 600;
+
         }
     }
 
