--- a/src/assets/sass/lbd/_myCss.scss
+++ b/src/assets/sass/lbd/_myCss.scss
@@ -1,3 +1,5 @@
+// @note here to control the white space in sidebar
+
 .responsive-divider {
-    height: calc(100vh - 700px);
+    height: calc(100vh - 550px);
   }
